--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  go_router:
+  flutter_riverpod:
 
 
   # The following adds the Cupertino Icons font to your application.
