--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   url_launcher:
   provider:
   shared_preferences : 2.3.2
+  dropdown_button2:
+  flutter_form_builder:
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_test:
